--- a/A67_42.html
+++ b/A67_42.html
@@ -52,10 +52,12 @@
                            <li><a class="dropdown-item" href="imprint.html" data-i18n="navbar__imprint"></a></li>
                         </ul>
                      </li>
-                     <li class="nav-item"><a class="nav-link" href="toc.html" data-i18n="navbar__works"></a></li>
+                     <li class="nav-item"><a class="nav-link" href="toc.html" data-i18n="navbar__nofacs"></a></li>
                      <li class="nav-item dropdown disabled"><a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-i18n="navbar__register"></a><ul class="dropdown-menu">
                            <li><a class="dropdown-item" href="listperson.html" data-i18n="navbar__persons"></a></li>
                            <li><a class="dropdown-item" href="listplace.html" data-i18n="navbar__places"></a></li>
+                           <li><a class="dropdown-item" href="listorg.html" data-i18n="navbar__orgs"></a></li>
+                           <li><a class="dropdown-item" href="listbibl.html" data-i18n="navbar__works"></a></li>
                         </ul>
                      </li>
                      <li class="nav-item"><a title="Suche" class="nav-link" href="search.html" data-i18n="navbar__search"></a></li><select name="language" id="languageSwitcher"></select></ul>
@@ -67,6 +69,10 @@
          <div class="container">
             <div class="row">
                <div class="col-md-2 col-lg-2 col-sm-12"></div>
+               <div class="col-md-8 col-lg-8 col-sm-12">
+                  <h1 align="center">Das 4. Respons Buch</h1>
+                  <h3 align="center"><a href=""><i class="bi bi-download" title="TEI/XML"></i></a></h3>
+               </div>
                <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right"></div>
                <div id="editor-widget">
                   <div  id="aot-navBarNavDropdown" class="navBarNavDropdown dropstart"><a title="Annotationen" href="#" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" role="button"><i class="bi bi-gear" title="Menü zur Anpassung der Anzeige"></i></a><ul class="dropdown-menu">
