--- a/toc.html
+++ b/toc.html
@@ -47,10 +47,12 @@
                            <li><a class="dropdown-item" href="imprint.html" data-i18n="navbar__imprint"></a></li>
                         </ul>
                      </li>
-                     <li class="nav-item"><a class="nav-link" href="toc.html" data-i18n="navbar__works"></a></li>
+                     <li class="nav-item"><a class="nav-link" href="toc.html" data-i18n="navbar__nofacs"></a></li>
                      <li class="nav-item dropdown disabled"><a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-i18n="navbar__register"></a><ul class="dropdown-menu">
                            <li><a class="dropdown-item" href="listperson.html" data-i18n="navbar__persons"></a></li>
                            <li><a class="dropdown-item" href="listplace.html" data-i18n="navbar__places"></a></li>
+                           <li><a class="dropdown-item" href="listorg.html" data-i18n="navbar__orgs"></a></li>
+                           <li><a class="dropdown-item" href="listbibl.html" data-i18n="navbar__works"></a></li>
                         </ul>
                      </li>
                      <li class="nav-item"><a title="Suche" class="nav-link" href="search.html" data-i18n="navbar__search"></a></li><select name="language" id="languageSwitcher"></select></ul>
@@ -67,16 +69,13 @@
                      <th scope="col" width="20" tabulator-formatter="html" tabulator-headerSort="false" tabulator-download="false">#</th>
                      <th scope="col" width="400" tabulator-headerFilter="input">Titel</th>
                      <th scope="col" width="150" tabulator-headerFilter="input">Dateiname</th>
-                     <th scope="col" width="100" tabulator-headerFilter="input">Datum
-                        (notBefore)</th>
+                     <th scope="col" width="100" tabulator-headerFilter="input">Datum (notBefore)</th>
                      <th scope="col" width="100" tabulator-headerFilter="input">Liturgie</th>
-                     <th scope="col" width="400" tabulator-headerFilter="input">Book
-                        Type</th>
+                     <th scope="col" width="400" tabulator-headerFilter="input">Book Type</th>
                      <th scope="col" width="200" tabulator-headerFilter="input">Provenienz</th>
                      <th scope="col" width="300" tabulator-headerFilter="input">Drucker</th>
                      <th scope="col" width="100" tabulator-headerFilter="input">Folia</th>
-                     <th scope="col" width="100" tabulator-headerFilter="input">Höhe
-                        (mm)</th>
+                     <th scope="col" width="100" tabulator-headerFilter="input">Höhe (mm)</th>
                      <th scope="col" width="100" tabulator-headerFilter="input">Breite (mm)</th>
                      <th scope="col" width="1000" tabulator-headerFilter="input">Beschreibung</th>
                      <th scope="col" width="150" tabulator-headerFilter="sort">Traskriptionstatus</th>
