--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
                            <li><a class="dropdown-item" href="imprint.html" data-i18n="navbar__imprint"></a></li>
                         </ul>
                      </li>
-                     <li class="nav-item"><a class="nav-link" href="toc.html" data-i18n="navbar__nofacs"></a></li>
+                     <li class="nav-item"><a class="nav-link" href="toc.html" data-i18n="navbar__works"></a></li>
                      <li class="nav-item dropdown disabled"><a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-i18n="navbar__register"></a><ul class="dropdown-menu">
                            <li><a class="dropdown-item" href="listperson.html" data-i18n="navbar__persons"></a></li>
                            <li><a class="dropdown-item" href="listplace.html" data-i18n="navbar__places"></a></li>
-                           <li><a class="dropdown-item" href="listorg.html" data-i18n="navbar__orgs"></a></li>
-                           <li><a class="dropdown-item" href="listbibl.html" data-i18n="navbar__works"></a></li>
                         </ul>
                      </li>
                      <li class="nav-item"><a title="Suche" class="nav-link" href="search.html" data-i18n="navbar__search"></a></li><select name="language" id="languageSwitcher"></select></ul>
